# Stereo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CVStereoRectify.h  Makefile  README.md  RectDM  brute  brute.cpp  cmake_install.cmake  depthmap.cpp  depthmap.h  main  main.cpp  match.py  rect  rect.cpp  rectDM.cpp  reprojection.cpp  reprojection.h  segment.cpp  segment.h  stereoBMtune  stereoBMtune.c  stereoBMtune.cpp  stereoSGBMtune  stereoSGBMtune.cpp  stereoVartune  stereoVartune.cpp  vizualization.cpp  vizualization.h
StereoBMTuner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  mk  stereoBMtune  stereoVartune  stereoalltune  stereoalltune.cpp
chess_photo/: rect  rect.cpp
image_transform/: H  H3  HfromPoints.py  Makefile  calib  calibrate.py  depthmap  depthmap.cpp  depthparams.yaml  fundamental.py  l1try  match.py  out  pipline.py  points  points2  r1try  setup_undistort.py  split.py  splitimage.py  transformImage.py  undistort.py
match_dump/: %d.np  0.np
tmp_data/: H.tmp
